# DevOps-2025

./: .env.example  .envrc  .gitignore  .terraform.lock.hcl  DevOps-2025.sln  Dockerfile  Gemfile  README.md  Vagrantfile  Vagrantfile_backupBeforeDockerSwarm  app.rb  compose.yaml  config.ru  control.sh  dev-compose.yml  docker_swarm_setup.sh  flag_tool  install-dependencies.sh  install-part1.sh  install-part2.sh  migration.sh  minitwit.py  minitwit.rb  minitwit_api.rb  nohup.out  prometheus.yml  provider.tf  pyproject.toml  reassign_reserved_ip.sh  refactored_minitwit_tests.py  requirements.txt  start_vm.sh  start_web_server.sh  terraform.tfstate  terraform.tfstate.backup  www-1.tf
.config/: .rubocop.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: automatic-releases.yml  bundler-audit.yml  continous-deployment.yml  continous-testing.yml  continuous-deployment.yml  continuous-testing.yml  hadolint.yml  report.yml  (+3 more)
.terraform/: terraform.tfstate
db/: minitwit.db
flag_tool/: flag_tool.csproj
helpers/: db_helper.rb
images/: Dockerfile.flagtool  Dockerfile.minitwit  Dockerfile.minitwit_tests  Dockerfile.mysql  Dockerfile.test
logging_setup/: entrypoint.sh  lib.sh
nix/: README.md  flake.nix
notes/: log-book.md  week1.md
remote_files/: compose.yml  deploy.sh  load.db  migration.sh  prometheus.yml  promtail.yml  reassign_reserved_ip.sh  schema.sql  stack.yml  start_vm.sh
report/: main.tex  packages.tex  refs.bib
temp/: manager_token  worker_token
views/: layout.erb  layout.html  login.erb  register.erb  timeline.erb
(+64 files in other folders)
