[tool.poetry]
name = "devops-2025"
version = "0.1.0"
description = "Project for the course DevOps, Software Evolution and Software Maintenance"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
flask = ">=3.0.0"
werkzeug = ">=3.0.0"
jinja2 = ">=3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
